nowrap bug

--- a/websit-reveal-animation-using-tweenmax.css
+++ b/websit-reveal-animation-using-tweenmax.css
@@ -90,7 +90,10 @@ body {
   font-size: 10em;
   color: #393833;
   overflow: hidden;
-  white-space: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap;
 }
 
 .title .letter {
